# dabox

./: .gitignore  README.md  mediamtx.yml  pyproject.toml
.github/workflows/: core_code_checks.yml  publish.yml
dabox/: env.py
dabox/assets/: mediamtx.yml
dabox/calibration/: dataclasses.py
dabox/dataclasses/: calibration.py
dabox/gui/: gui.py  theme.py
dabox/gui/assets/: mdx_example.mdx  video_streams.mdx
dabox/inference/: __main__.py  infer.py  video_capture.py
dabox/inference/yolov8/: yolov8.py
dabox/scripts/: dabox_kill.py  dabox_up.py  dev_checks.py  export_yolov8.py  preflight.py  up.py
dabox/streams/: mediamtx.py
dabox/util/: cli_logo.py  devices.py  drawing.py  logging.py  projection.py  subprocess.py  transform.py  video_capture.py
dabox/yolov8/: utils.py  yolov8.py
scripts/: funnel_down.sh  funnel_up.sh  kill_dabox.sh  mediamtx_linux.sh  mediamtx_osx.sh
tests/: test_env.py
